added some updates

--- a/assets/css/base/variables.css
+++ b/assets/css/base/variables.css
@@ -13,6 +13,7 @@
 
     /* Neutral Colors */
     --background-color: #FFFFFF;  
+    --complementary-background-color:rgb(101, 101, 101);
     --surface-color: #F8F8F8;  
     --border-color: #E0E0E0;
 
