--- a/assets/css/layouts/header.css
+++ b/assets/css/layouts/header.css
@@ -151,6 +151,38 @@ header {
          transform: translateX(50px);
 }
 
+.__nav-item a{
+    position: relative;
+    overflow: hidden;
+}
+
+.__nav-item a svg{
+     position: absolute;
+     left: 10px;
+     top: 10px;
+     opacity: 0;
+     
+     -webkit-transition: all 0.3s ease;
+     -moz-transition: all 0.3s ease;
+     -ms-transition: all 0.3s ease;
+     -o-transition: all 0.3s ease;
+     transition: all 0.3s ease;
+     -webkit-transform: rotate(-45deg) scale(0.6);
+     -moz-transform: rotate(-45deg) scale(0.6);
+     -ms-transform: rotate(-45deg) scale(0.6);
+     -o-transform: rotate(-45deg) scale(0.6);
+     transform: rotate(-45deg) scale(0.6);
+}
+
+.__nav-item a:hover svg, .__nav-item a.active svg{
+    -webkit-transform: rotate(0deg) scale(1);
+    -moz-transform: rotate(0deg) scale(1);
+    -ms-transform: rotate(0deg) scale(1);
+    -o-transform: rotate(0deg) scale(1);
+    transform: rotate(0deg) scale(1);
+    opacity: 1;
+}
+
 .__nav-item:nth-child(1)::before{
     content: "";
     position: absolute;
