--- a/assets/css/layouts/hero-section.css
+++ b/assets/css/layouts/hero-section.css
@@ -170,6 +170,24 @@ section {
     overflow: hidden;
 }
 
+.__cta-btn svg{
+     position: absolute;
+     left: var(--spacing-sm);
+     top: 50%;
+     transform: translateY(-50%);
+     opacity: 1;
+     -webkit-transform: translateY(-50%);
+     -moz-transform: translateY(-50%);
+     -ms-transform: translateY(-50%);
+     -o-transform: translateY(-50%);
+     transform: rotate(-45deg) scale(0 .6) ;
+     -webkit-transition: all 0.3s ease;
+     -moz-transition: all 0.3s ease;
+     -ms-transition: all 0.3s ease;
+     -o-transition: all 0.3s ease;
+     transition: all 0.3s ease;
+}
+
 #hireMeBtn {
     background: var(--primary-color);
     font-family: "Sour Gummy", sans-serif;
